CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(qxml)

INCLUDE_DIRECTORIES("include")

FILE(GLOB_RECURSE ${PROJECT_NAME}_FILES src/*.c)

ADD_LIBRARY(${PROJECT_NAME}        SHARED ${${PROJECT_NAME}_FILES})
ADD_LIBRARY(${PROJECT_NAME}.static STATIC ${${PROJECT_NAME}_FILES})

SET_TARGET_PROPERTIES(${PROJECT_NAME} ${PROJECT_NAME}.static
    PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_SUBDIRECTORY(test EXCLUDE_FROM_ALL)

FILE(GLOB_RECURSE HEADERS "include/qxml/*.h")
INSTALL(FILES ${HEADERS} DESTINATION "include/qxml")
INSTALL(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}.static
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)
