CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(qxml_test)

INCLUDE_DIRECTORIES("../include")

FILE(GLOB_RECURSE ${PROJECT_NAME}_FILES *.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_FILES})
ADD_DEPENDENCIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME}.static)

ADD_CUSTOM_TARGET(test
    ${qxml_test_BINARY_DIR}/qxml_test
    DEPENDS qxml_test
    WORKING_DIRECTORY ${qxml_test_SOURCE_DIR})
