CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(${CMAKE_PROJECT_NAME}_test)

INCLUDE_DIRECTORIES("../include")

FILE(GLOB_RECURSE ${PROJECT_NAME}_FILES *.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_FILES})
ADD_DEPENDENCIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME}.static)

ADD_CUSTOM_TARGET(test
    ${qxml_test_BINARY_DIR}/${CMAKE_PROJECT_NAME}_test
    DEPENDS ${CMAKE_PROJECT_NAME}_test
    WORKING_DIRECTORY ${${CMAKE_PROJECT_NAME}_test_SOURCE_DIR})
